upgrade to java 16 (#54)