@@ -5,10 +5,10 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
+import java.io.Serial;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import org.hamcrest.Matchers;
 import org.junit.jupiter.api.Test;
 
@@ -20,6 +20,7 @@ public class LinkedHashMapTest {
     @Test
     void testBasic() {
         Map<String, String> cache = new LinkedHashMap<>(15, 0.75f, true) {
+            @Serial
             private static final long serialVersionUID = 1L;
 
             @Override
@@ -48,6 +49,6 @@ public class LinkedHashMapTest {
     }
 
     private static List<String> getListFromIterator(Map<String, String> map) {
-        return map.entrySet().stream().map(Map.Entry::toString).collect(Collectors.toList());
+        return map.entrySet().stream().map(Map.Entry::toString).toList();
     }
 }
