@@ -11,6 +11,7 @@ import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.ObjectInputStream;
 import java.io.ObjectOutputStream;
+import java.io.Serial;
 import java.lang.System.Logger.Level;
 import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
@@ -27,7 +28,6 @@ import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 import org.junit.jupiter.api.Test;
 import org.sn.myutils.testutils.TestUtil;
 import org.sn.myutils.util.concurrent.SerializableScheduledExecutorService.RecreateRunnableFailedException;
@@ -35,6 +35,7 @@ import org.sn.myutils.util.concurrent.SerializableScheduledExecutorService.TaskI
 import org.sn.myutils.util.concurrent.SerializableScheduledExecutorService.UnfinishedTasks;
 
 
+@SuppressWarnings("OptionalGetWithoutIsPresent")
 public class SerializableScheduledExecutorServiceTest {
 
     private static List<AtomicInteger> createNumbers(int count) {
@@ -156,7 +157,7 @@ public class SerializableScheduledExecutorServiceTest {
             assertEquals(Arrays.asList(1, 2, 2, 2),
                          TestRunnablesWithDefaultConstructor.numbers.stream()
                                                                     .map(AtomicInteger::get)
-                                                                    .collect(Collectors.toList()));
+                                                                    .toList());
             assertEquals(2, unfinishedRunnables.size()); // returns the cancelled tasks
             
             UnfinishedTasks unfinishedTasks = service.exportUnfinishedTasks();
@@ -168,7 +169,7 @@ public class SerializableScheduledExecutorServiceTest {
                                         .sorted(Comparator.comparing(TaskInfo::getInitialDelayInNanos))
                                         .map(TaskInfo::getUnderlyingClass)
                                         .map(Class::getSimpleName)
-                                        .collect(Collectors.toList()));
+                                        .toList());
             
             ObjectOutputStream oos = new ObjectOutputStream(bos);
             oos.writeObject(unfinishedTasks);
@@ -179,7 +180,7 @@ public class SerializableScheduledExecutorServiceTest {
         assertEquals(Arrays.asList(1, 2, 2, 2),
                      TestRunnablesWithDefaultConstructor.numbers.stream()
                                                                 .map(AtomicInteger::get)
-                                                                .collect(Collectors.toList()));
+                                                                .toList());
         
         {
             ObjectInputStream ois = new ObjectInputStream(new ByteArrayInputStream(bos.toByteArray()));
@@ -201,7 +202,7 @@ public class SerializableScheduledExecutorServiceTest {
             assertEquals(Arrays.asList(2, 3, 3, 2),
                          TestRunnablesWithDefaultConstructor.numbers.stream()
                                                                     .map(AtomicInteger::get)
-                                                                    .collect(Collectors.toList()));
+                                                                    .toList());
             assertEquals(0, unfinishedRunnables.size());
             
             UnfinishedTasks unfinishedTasks = service.exportUnfinishedTasks();
@@ -213,6 +214,7 @@ public class SerializableScheduledExecutorServiceTest {
 
     
     private static class TestSerializableRunnable implements SerializableRunnable {
+        @Serial
         private static final long serialVersionUID = 1L;
 
         private static final List<AtomicInteger> numbers = createNumbers(4); 
@@ -264,7 +266,7 @@ public class SerializableScheduledExecutorServiceTest {
             recurringFuture70.cancel(false);
 
             List<Runnable> unfinishedRunnables = service.shutdownNow();
-            assertEquals(Arrays.asList(1, 2, 2, 2), TestSerializableRunnable.numbers.stream().map(AtomicInteger::get).collect(Collectors.toList()));
+            assertEquals(Arrays.asList(1, 2, 2, 2), TestSerializableRunnable.numbers.stream().map(AtomicInteger::get).toList());
             assertEquals(2, unfinishedRunnables.size()); // returns the cancelled tasks
             
             UnfinishedTasks unfinishedTasks = service.exportUnfinishedTasks();
@@ -277,7 +279,7 @@ public class SerializableScheduledExecutorServiceTest {
                                    .map(TaskInfo::getSerializableRunnable)
                                    .map(serializableRunnable -> (TestSerializableRunnable) serializableRunnable)
                                    .map(TestSerializableRunnable::getIndex)
-                                   .collect(Collectors.toList()));
+                                   .toList());
 
             ObjectOutputStream oos = new ObjectOutputStream(bos);
             oos.writeObject(unfinishedTasks);
@@ -285,7 +287,7 @@ public class SerializableScheduledExecutorServiceTest {
         }
         
         Thread.sleep(1000);
-        assertEquals(Arrays.asList(1, 2, 2, 2), TestSerializableRunnable.numbers.stream().map(AtomicInteger::get).collect(Collectors.toList()));
+        assertEquals(Arrays.asList(1, 2, 2, 2), TestSerializableRunnable.numbers.stream().map(AtomicInteger::get).toList());
         
         {
             ObjectInputStream ois = new ObjectInputStream(new ByteArrayInputStream(bos.toByteArray()));
@@ -304,7 +306,7 @@ public class SerializableScheduledExecutorServiceTest {
             // runnable4: 1670 was cancelled above
 
             List<Runnable> unfinishedRunnables = service.shutdownNow();
-            assertEquals(Arrays.asList(2, 3, 3, 2), TestSerializableRunnable.numbers.stream().map(AtomicInteger::get).collect(Collectors.toList()));
+            assertEquals(Arrays.asList(2, 3, 3, 2), TestSerializableRunnable.numbers.stream().map(AtomicInteger::get).toList());
             assertEquals(0, unfinishedRunnables.size());
             
             UnfinishedTasks unfinishedTasks = service.exportUnfinishedTasks();
@@ -329,6 +331,7 @@ public class SerializableScheduledExecutorServiceTest {
     }
 
     private static class TestSerializableCallable implements SerializableCallable<Integer> {
+        @Serial
         private static final long serialVersionUID = 1L;
         private static final AtomicInteger number = new AtomicInteger();
 
@@ -400,7 +403,7 @@ public class SerializableScheduledExecutorServiceTest {
                                    .filter(Objects::nonNull)
                                    .map(serializableCallable -> (TestSerializableCallable) serializableCallable)
                                    .map(TestSerializableCallable::getLocal)
-                                   .collect(Collectors.toList()));
+                                   .toList());
 
             ObjectOutputStream oos = new ObjectOutputStream(bos);
             oos.writeObject(unfinishedTasks);
@@ -665,7 +668,7 @@ public class SerializableScheduledExecutorServiceTest {
                                  recreateRunnableFailedException.getFailedClasses().stream()
                                           .map(Class::getSimpleName)
                                           .sorted()
-                                          .collect(Collectors.toList()));
+                                          .toList());
                 });
         }
     }
@@ -673,6 +676,7 @@ public class SerializableScheduledExecutorServiceTest {
     
     
     private static class TestRunnableThatExceptionsOut implements SerializableRunnable {
+        @Serial
         private static final long serialVersionUID = 1L;
         private static final AtomicInteger staticCounter = new AtomicInteger();
 
@@ -784,6 +788,7 @@ public class SerializableScheduledExecutorServiceTest {
     }
 
     private static class CustomRejectedExecutionException extends RejectedExecutionException {
+        @Serial
         private static final long serialVersionUID = 1;
     }
 }
